# multitimer-tui

./: .gitignore  Cargo.toml  README.md  config.json  helptext.txt
src/: color.rs  configuration.rs  input_field.rs  lib.rs  main.rs  timer.rs  timer_logic.rs  ui.rs  ui_states.rs  utils.rs
src/configuration/: timer.rs
