[package]
name = "multitimer-tui"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = """
multitimer-tui is a productivity tool that lets you attach timers to a To-Do List with a TUI
"""
homepage = "https://github.com/Jo6a/multitimer-tui"
repository = "https://github.com/Jo6a/multitimer-tui"
license = "MIT"
keywords = ["tui", "terminal", "timer", "pomodoro", "budget", "terminal-app"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "multitimer-tui"
path = "src/main.rs"
test = false
bench = false

[dependencies]
tui = "0.19.0"
crossterm = "0.25"
bitflags = "1.3"
cassowary = "0.3"
unicode-segmentation = "1.2"
unicode-width = "0.1"
termion = { version = "2.0.1", optional = true }
rand = "0.8"
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"