[package]
name = "multitimer-tui"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = """
multitimer-tui is a productivity tool that lets you attach timers to a To-Do List with a TUI
"""
homepage = "https://github.com/Jo6a/multitimer-tui"
repository = "https://github.com/Jo6a/multitimer-tui"
license = "MIT"
keywords = ["tui", "terminal", "timer", "pomodoro", "terminal-app"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "multitimer-tui"
path = "src/main.rs"
test = false
bench = false

[dependencies]
crossterm = "0.25"
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.21.0"
